<resources>
    <string name="app_name">Login</string>

    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha (opcional)</string>
    <string name="action_sign_in">Entrar ou cadastrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Esta senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"As permissões de contatos são necessárias para fornecer preenchimentos de e-mail."</string>
    <string name="title_activity_login">Entrar</string>
    <string name="login_password">Senha</string>
    <string name="login_username">Nome de usuário</string>
    <string name="login_register">Cadastrar</string>
    <string name="login_login">Entrar</string>
</resources>
